 2011-03-18 17:48  alexpeshkoff 
   M src/jrd/os/posix/mod_loader.cpp
Fixed CORE-3397: Unresolved symbols in intl and trace libraries

 2011-03-17 14:02  alexpeshkoff 
   M configure.in
Fixed s390 linux port error

 2011-03-17 11:23  hvlad 
   M src/jrd/idx.cpp
Fixed bug CORE-3394 : Failed attempt to violate unique constraint could leave unneeded "lock conflict" error in status-vector.
Backported more conservative version of patch

 2011-03-16 13:06  paulbeach 
   M builds/posix/prefix.darwin_powerpc
   M builds/posix/prefix.darwin_ppc64
Minor mod to allow 2.1.4 to build successfully

 2011-03-16 08:04  alexpeshkoff 
   M src/jrd/scl.epp
Fixed CORE-3388: Does not build on fedore core

 2011-03-04 17:59  dimitr 
   M src/jrd/vio.cpp
The simplest possible fix for CORE-3374: Server may crash or corrupt data if SELECT WITH LOCK is issued against records not in the latest format. Thanks to Vlad.

 2011-02-22 12:21  dimitr 
   M src/jrd/Optimizer.cpp
   M src/jrd/btr.cpp
   M src/jrd/opt.cpp
Better solution for CORE-3355, as suggested by Vlad.

 2011-02-21 11:15  dimitr 
   M src/jrd/Optimizer.cpp
   M src/jrd/btr.cpp
   M src/jrd/btr_proto.h
   M src/jrd/opt.cpp
Fixed CORE-3355: Wrong comparison of DATE and TIMESTAMP if index is used.

 2011-02-18 06:26  dimitr 
   M src/jrd/evl.cpp
Fixed the main reason for CORE-3233: LIKE, STARTING and CONTAINING fail if second operand >= 32K. Thanks to Adriano.

 2011-02-18 01:21  robocop 
   M src/jrd/SysFunction.cpp
Make sure at least one operand is widened before the multiplication.

 2011-02-17 17:33  dimitr 
   M src/jrd/evl.cpp
Fixed inability to execute LIKE/STARTING/etc if the second argument is a small (<32KB) blob and the first one is a blob of charset NONE. This is partially related to CORE-3233, see my comment there.

 2011-02-17 07:38  dimitr 
   M src/dsql/pass1.cpp
Fixed CORE-3353: Predicate (blob_field LIKE ?) describes the parameter as VARCHAR(30) rather than as BLOB.