@@ -1,3 +1,8 @@
+ 2011-03-22 13:14  alexpeshkoff 
+   M src/common/classes/alloc.h
+   M src/include/fb_exception.h
+Make it build with fresh gcc versions - backported from 2.5 redefinition of operator new
+
  2011-03-18 17:48  alexpeshkoff 
    M src/jrd/os/posix/mod_loader.cpp
 Fixed CORE-3397: Unresolved symbols in intl and trace libraries
